# SecondBrain

./: pyproject.toml
backend/schema/: node.py  query.py
frontend/: Home_Page.py  components.py  content.py
frontend/pages/: 01_Build_Your_Brain.py
