[tool.poetry]
name = "secondbrain"
version = "0.1.0"
description = ""
authors = ["Joash <joashalonso@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
streamlit = "^1.35.0"
pydantic = "^2.7.3"
watchdog = "^4.0.1"
ollama = "^0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
